Fixed with overlapping self-stream

--- a/frontend/src/pages/room/Room.scss
+++ b/frontend/src/pages/room/Room.scss
@@ -31,6 +31,7 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
+    position: relative;
 
     video {
         min-height: 100%;
